Notify textChanged if button's children change

When a button's textContent changes, post a textChanged notification.
A button's textContent is a child of the button container, but in the
accessibility tree button elements cannot have children, so
ChildrenChanged previously did not update the button.

Bug: 793078
Test: DumpAccessibilityTreeTest.AccessibilityButtonContentChanged
Change-Id: I2be389c77763cb60fd2fc9951070370856b0c894
Reviewed-on: https://chromium-review.googlesource.com/1110658
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: Hayato Ito <hayato@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570786}
Former-commit-id: 1a64677500027ed83a9585040feb8a46438e7c58