third_party/blink/renderer/core/dom/container_node.cc
@@ -351,6 +351,9 @@ void ContainerNode::DidInsertNodeVector(
       DispatchChildInsertionEvents(*target_node);
   }
   DispatchSubtreeModifiedEvent();
+
+  if (AXObjectCache* cache = GetDocument().GetOrCreateAXObjectCache())
+    cache->DidInsertChildrenOfNode(this);
 }
 
 class ContainerNode::AdoptAndInsertBefore {
