third_party/blink/renderer/modules/accessibility/ax_object_cache_impl.h
@@ -132,6 +132,7 @@ class MODULES_EXPORT AXObjectCacheImpl
   // Called when a node has just been attached, so we can make sure we have the
   // right subclass of AXObject.
   void UpdateCacheAfterNodeIsAttached(Node*) override;
+  void DidInsertChildrenOfNode(Node*) override;
 
   void HandleAttributeChanged(const QualifiedName& attr_name,
                               Element*) override;
